minio-manifest/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-to-https
  namespace: minio
spec:
  redirectScheme:
    scheme: https
    permanent: true
