minio-manifest/minio-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: minio
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: minio-redirect-http-to-https@kubernetescrd
spec:
  ingressClassName: traefik

  tls:
  - hosts:
    - s3.ranjan.host
    secretName: wildcard-ranjan-host

  rules:
  - host: s3.ranjan.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
